--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {"开启后，2.4G和5G会使用同一名称，路由器会自动为终端选择最佳WiFi网络，如离路由器较近，会切换至5G网络，反之会切换至2.4G网络。但由于终端设备存在差异，可能存在：自动切换信号源时网络会短暂中断，甚至频繁掉线等问题。":"Connect the 2.4 G and 5G under the same network name. The frequency will be switched automatically frequency depending on the signal or device type.",
-"目前路由器拨号上网获得的多半都是动态IP，DDNS可以将路由器变化的外网IP和固定的域名绑定，从而用户可以在外网通过该固定域名来访问路由器。":"Very often, the Internet service provider when connecting to the network provide external dynamic ip address (Stream, Beeline/Corbina, etc.). The vast majority of users this is enough. However, in some cases (for network games to access your computer from outside), the required external static address. Provide this service, not all providers, and if granted, for an additional fee. To work around this problem, you can use DDNS technology, allowing to connect an external dynamic ip address and a permanent domain name. To use DDNS is completely free!</span>",
+"目前路由器拨号上网获得的多半都是动态IP，DDNS可以将路由器变化的外网IP和固定的域名绑定，从而用户可以在外网通过该固定域名来访问路由器。":"Very often, the Internet service provider when connecting to the network provide external dynamic ip address (Stream, Beeline/Corbina, etc.). The vast majority of users this is enough. However, in some cases (for network games to access your computer from outside), the required external static address. Provide this service, not all providers, and if granted, for an additional fee. To work around this problem, you can use DDNS technology, allowing to connect an external dynamic IP address and a permanent domain name. To use DDNS is completely free!</span>",
 "开启该功能后，需要您重新连接VPN方可生效，且智能分流功能将关闭。若开启后发现路由器App远程访问出现异常，请您关闭。是否确认开启？":"When you enable this feature, we require you to reconnect the VPN in force, and intellectual bypass function is turned off. If the router is turned on after opening the App remote access is abnormal, please turn off. You are sure to turn? <span style='color:red'>Help to improve the translation, write in chat your text</span>",
 "路由器正常工作情况下建议使用系统升级检测进行升级，在当系统无法升级或需要降级到前一版本时使用手动上传rom包进行升级。":"In normal mode it is recommended to use automatic updates. Manual updating is typically used to downgrade the firmware.",
 "WiFi双频合一关闭，5G会默认使用2.4G相同的网络名称（加后缀_5G）和密码，如需设成不一样，请进行修改。":"Wi-Fi access points will be divided into 2 frequencies. 5G will have the name prefix.",
@@ -11,7 +11,7 @@
 "恢复出厂设置操作会抹掉当前路由器的所有设置，建议您先进行配置备份再恢复出厂设置。":"Factory data reset will erase all current settings of the router, we recommend that you configure a backup and then restore to factory settings.",
 "升级过程大约需要5-8分钟，路由器指示灯重新变蓝后，可以通过miwifi.com进入管理后台 ":"the Process can take 5-8 minutes. As soon as the led on the router turns blue, You will be able to visit his office.",
 "开启DMZ功能可以将内网某一个设备的IP映射到外网，方便从外网访问到该设备。":"DMZ (Demilitarized zone) is a network configuration in which publicly accessible servers are in a separate, isolated network segment. This concept ensures no contact between open for public access servers and other network segments in case of hacking the server. In implementing the concept of DMZ is a special role for the firewall, as it is responsible for carrying out the desired policy for the protection of local networks from the DMZ segment simultaneously maintain access to the DMZ. Due to the complexity of implementation is not recommended to apply the technology of DMZ, if you are not familiar with the principles of creation and operation of networks. The use of technology DMZ is not mandatory, but in most cases it is recommended that network administrators serious about security issues.",
-"开启DDNS服务，添加服务，输入前一步获取的信息，保存并启用该服务。":"To access the DDNS service, enter information, and sohraniti to enable.",
+"开启DDNS服务，添加服务，输入前一步获取的信息，保存并启用该服务。":"To access the DDNS service, enter information, and save to enable.",
 "备份路由器的配置，重新刷机或重置路由器后可以用来恢复。":"You can create a backup of your router settings or restore from backup made earlier.",
 "未检测到存储设备，请将USB存储设备连接到你的小米路由器":"Not detected storage device, connect the USB device!",
 "当前管理终端的MAC地址，可以手动更改为其他MAC地址":"Current MAC address. You can manually switch to another.",
@@ -126,7 +126,7 @@
 "当前内存占用":"Used",
 "家庭WiFi限速":"Limit Wi-Fi speed",
 "QoS智能限速":"Smart QoS rate",
-"访客WiFi限速":"Ogranicene speed Wi-Fi",
+"访客WiFi限速":"Limit guest Wi-Fi speed",
 "没有设置信息":"List is empty",
 "设置系统语言":"system Language",
 "一键无线中继":"wireless relay",
@@ -159,7 +159,7 @@
 "UPnP状态":"UPnP status",
 "Wi-Fi设置":" Wi-Fi Settings",
 "MAC地址":"MAC-address",
-"访客Wi-Fi":"Guest wifi",
+"访客Wi-Fi":"Guest Wi-Fi",
 "注意事项:":"precautions:",
 "PC客户端":"PC Client",
 "设置QoS":"configuring QoS",
@@ -294,7 +294,7 @@
 "局域网":"Local ",
 "原密码":"Old",
 "新密码":"New",
-"稳定版":"Stabile.",
+"稳定版":"Stable.",
 "静态IP":"Static IP",
 "其他":"Other",
 "带宽":"Speed ",
@@ -360,7 +360,7 @@
 "正在扫描附近的无线网络":"searching for networks...",
 "正在检测更新，请稍候...":"Checking for updates...",
 "手工输入网络名称":"Enter name manually",
-"检测到最新版本为":"Available novya version",
+"检测到最新版本为":"A new version is available",
 "点击此处立即升级":"Install.",
 "新建端口转发规则":"Add forwarding rule",
 "Android客户端":"Android Client",
