--- a/lang/ru.json
+++ b/lang/ru.json
@@ -3,7 +3,7 @@
 "开启该功能后，需要您重新连接VPN方可生效，且智能分流功能将关闭。若开启后发现路由器App远程访问出现异常，请您关闭。是否确认开启？":"При включении этой функции, мы требуем, чтобы вы снова подсоедините VPN вступили в силу, а интеллектуальная функция обхода выключена. Если маршрутизатор включен после открытия App удаленного доступа ненормального, пожалуйста, выключите. Вы уверены, чтобы включить? <span style='color:red'>Помоги улучшить перевод напиши в чате свой вариант этого текста</span>",
 "路由器正常工作情况下建议使用系统升级检测进行升级，在当系统无法升级或需要降级到前一版本时使用手动上传rom包进行升级。":"В обычном режиме рекомендуется использовать автоматические обновления. Ручное обновление обычно используется для понижения версии прошивки.",
 "5G Wi-Fi是运行在5GHz以上的高频段的独立Wi-Fi比较2.4G Wi-Fi速度更快更稳定，适合电视、盒子包括距离路由器较近的设备":"5G Wi-Fi - это более быстрый Wi-Fi по сравнению с 2.4G, он более стабильный, но обладает меньшей дальностью действия.",
-"WiFi双频合一关闭，5G会默认使用2.4G相同的网络名称（加后缀_5G）和密码，如需设成不一样，请进行修改。":"Wi-Fi точки будут разделены на 2 частоты. 5G будеть иметь в названии приставку.",
+"WiFi双频合一关闭，5G会默认使用2.4G相同的网络名称（加后缀_5G）和密码，如需设成不一样，请进行修改。":"Wi-Fi точки будут разделены на 2 частоты. 5G будет иметь в названии приставку.",
 "当你需要通过VPN使用外网时，可以开启此功能保证小米路由器APP远程服务可用，其他情况下关闭此功能":"Когда вам нужно использовать внешнюю сеть через VPN, вы можете включить эту функция обеспечивает просо APP дистанционное обслуживание доступно маршрутизатор, отключите эту функцию в остальных случаях. <span style='color:red'>Помоги улучшить перевод, напиши в чате свой вариант этого текста.</span>",
 "开启相册备份后，回家手机上的照片将自动备份到小米路由器上，无需担心手机空间存储不足或数据丢失":"Включите резервное копирование с телефона и не переживайте о нехватке свободного места на нем или утере данных.",
 "路由器重启需要等待十几秒或更多时间，重启过程中将会断开网络连接，稍后将自动重新连接网络。":"Перезагрузка займет какое-то время. Наберитесь терпения.",
@@ -15,10 +15,10 @@
 "自动模式下路由器会根据当前网络使用情况动态调整带宽分配，保证网络体验流畅":"В автоматическом режиме маршрутизатор динамически регулирует распределение полосы пропускания в соответствии с текущим сетевым использованием, чтобы обеспечить бесперебойную работу сети.",
 "优先级模式下路由器会动态调整带宽分配，保证优先级较高的设备网络体验流畅":"Приоритетный режим, маршрутизатор будет динамически регулировать распределение полосы пропускания, чтобы обеспечить более высокое сетевое оборудование, которое имеет приоритет",
 "该操作将重启 Wi-Fi 并导致 Wi-Fi 下的所有设备失去连接，是否确认修改？":"Операция перезапустит Wi-Fi и приведет к потере всех подключенных устройств Wi-Fi.",
-"开启DDNS服务，添加服务，输入前一步获取的信息，保存并启用该服务。":"Открыть службы DDNS, ввести информацию, сохранинть и включить.",
+"开启DDNS服务，添加服务，输入前一步获取的信息，保存并启用该服务。":"Открыть службы DDNS, ввести информацию, сохранить и включить.",
 "可以通过内置的DDNS运营商去该运营商官网去注册账号及申请域名；":"Вы можете через встроенный оператор DDNS зарегистрировать учетную запись и подать заявку на доменное имя;",
 "重新连接vpn后该设置将生效，同时\"小米服务走vpn功能\"将关闭":"Этот параметр вступает в силу после повторного подключения vpn, и «сервис XIAOMI переходит в функцию vpn» Закрыт",
-"备份路由器的配置，重新刷机或重置路由器后可以用来恢复。":"Вы можете создать резервную копию настроек маршрутизатора, либо восстановить из копии сделаной ранее.",
+"备份路由器的配置，重新刷机或重置路由器后可以用来恢复。":"Вы можете создать резервную копию настроек маршрутизатора, либо восстановить из копии сделанной ранее.",
 "未检测到存储设备，请将USB存储设备连接到你的小米路由器":"Не обнаружено устройство хранения данных, подключите устройство USB!",
 "当前管理终端的MAC地址，可以手动更改为其他MAC地址":"Текущий MAC-адрес. Вы можете вручную переключиться на другой.",
 "可以通过添加服务地址来限定哪些服务流量会经过VPN":"Вы можете добавить службу VPN и выбрать какие услуги будут использовать VPN",
@@ -28,8 +28,8 @@
 "通过手机、电脑客户端，你可以随时随地添加下载任务":"Управляйте планировщиком загрузок прямо с телефона.",
 "经过检测，建议使用DHCP方式(系统自动分配IP地址)":"После тестирования, рекомендуется использовать DHCP (автоматически назначается IP-адрес)",
 "安装PC和Mac客户端，可以轻松访问小米路由器硬盘":"Установите клиент для PC или Mac, чтобы легко получить доступ к жесткому диску маршрутизатора.",
-"确定重启路由器，重启将断开和小米路由器的连接。":"Машрутизатор будет отключен, включений займет больше минуты.",
-"安装手机APP，你可以用更酷的方式浏览照片和影片":"Установите мобильное приложение для просомтра файлов и видео.",
+"确定重启路由器，重启将断开和小米路由器的连接。":"Маршрутизатор будет отключен, включение займет больше минуты.",
+"安装手机APP，你可以用更酷的方式浏览照片和影片":"Установите мобильное приложение для просмотра файлов и видео.",
 "在路由器工作模式和中继工作模式之间进行切换":"Переключение между режимом маршрутизатора и повторителя",
 "你可以自定义哪些服务或设备会走VPN的流量":"Настройте услуги и сервисы для работы с VPN",
 "您还可以通过拨打小米客服电话寻求相关帮助":"Вы также можете позвонить в центр обслуживания клиентов",
@@ -96,7 +96,7 @@
 "请至少输入8个字节。":"Введите не менее 8 символов",
 "强加密(WPA2个人版)":"Сильное шифрование WPA2",
 "当前未有5G连网设备":"В настоящее время нет сетевого оборудования 5G",
-"还没有设备添加进来":"Нет добавленых устройств",
+"还没有设备添加进来":"Нет добавленных устройств",
 "还没有服务添加进来":"Нет добавленных услуг",
 "正在测速，请等待。":"Загрузка обновлений...",
 "请勿断开路由器电源":"Не отключайте питание!",
@@ -155,7 +155,7 @@
 "当前内存占用":"Используется",
 "家庭WiFi限速":"Ограничение Wi-Fi скорости",
 "QoS智能限速":"QoS Смарт скорость",
-"访客WiFi限速":"Ограничене скорости Wi-Fi",
+"访客WiFi限速":"Ограничение скорости гост. Wi-Fi",
 "没有设置信息":"Список пуст",
 "设置系统语言":"Язык системы",
 "一键无线中继":"Ключ беспроводного реле",
@@ -238,7 +238,7 @@
 "上网方式":"Доступ",
 "外部端口":"Внешние порт",
 "内部端口":"Внутренний порт",
-"最大速度":"Макс. скорось",
+"最大速度":"Макс. скорость",
 "当前网速":"Скорость сети",
 "设备信息":"Информация",
 "路由状态":"Статус",
@@ -392,7 +392,7 @@
 "正在扫描附近的无线网络":"Идет поиск сетей...",
 "正在检测更新，请稍候...":"Проверка обновлений...",
 "手工输入网络名称":"Ввести имя вручную",
-"检测到最新版本为":"Доступна новя версия ",
+"检测到最新版本为":"Доступна новая версия ",
 "点击此处立即升级":"Установить.",
 "Android客户端":"Android Клиент",
 "iPhone客户端":"iPhone Клиент",
@@ -400,7 +400,7 @@
 "MAC客户端":"MAC Клиент",
 "处理中...":"Обработка...",
 "完成":"Завершить",
-"正在测速...":"Идет определение скорости...<br/>Скорость может отличаться от реальной из за дальности Китайских серверов.",
+"正在测速...":"Идет определение скорости...<br/>Скорость может отличаться от реальной из за дальности китайских серверов.",
 "网线连网设备":"Сетевой кабель",
 "访问外网":"Интернет",
 "连网设备":" Точка",
