--- a/lang/ru.json
+++ b/lang/ru.json
@@ -369,7 +369,7 @@
 "好的":"Хорошо",
 "自动":"Автоматически",
 "标准":"Стандарт",
-"穿墙":"Стена",
+"穿墙":"Максимум",
 "节能":"Энергосбережение",
 "确定":"Применить",
 "韩国":"Корея",
