--- a/lang/ru.json
+++ b/lang/ru.json
@@ -249,6 +249,7 @@
 "绑定设备":"Привязать оборудование",
 "设置成功":"Задание выполнено успешно!",
 "无线信道":"Радиоканал",
+"频段带宽":"Ширина",
 "信号强度":"Мощность",
 "解除绑定":"Отвязать",
 "添加规则":"Добавить правило",
