--- a/lang/ru.json
+++ b/lang/ru.json
@@ -142,7 +142,7 @@
 "修改管理密码":"Изменить пароль панели управления",
 "工作模式切换":"Режим переключения",
 "外网带宽状态":"Состояние пропускной способности",
-"智能VPN分流":"Смарт VPN шунт",
+"智能VPN分流":"Смарт VPN для обхода блокировки",
 "QoS智能分配":"Умное распределение QoS",
 "实时网络状态":"Состояние",
 "实时下行流量":"Прием",
