--- a/lang/ru.json
+++ b/lang/ru.json
@@ -102,6 +102,7 @@
 "请勿断开路由器电源":"Не отключайте питание!",
 "欢迎使用小米路由器":"Xiaomi маршрутизатор приветствует!",
 "© 2015 小米路由器":"© 2015 Xiaomi маршрутизатор",
+"(UTC+3)加里宁格勒":"(UTC+3) Калининград, Москва",
 "(UTC+1)中非西部":"(UTC + 1) Западная Африка",
 "手工设置外网带宽":"Ручная установка пределов скорости",
 "端口转发规则列表":"Правила переадресации портов",
