--- a/lang/ru.json
+++ b/lang/ru.json
@@ -161,6 +161,7 @@
 "设置系统语言":"Язык системы",
 "一键无线中继":"Ключ беспроводного реле",
 "日志上传成功":"Журнал успешно загружен",
+"最高速度设置":"Установка максимальной скорости",
 "请立即升级。":"Рекомендуем обновить",
 "自动（推荐）":"Автоматически (рек.)",
 "手工限速模式":"Ручной режим ограничения скорости",
@@ -312,6 +313,7 @@
 "系统状态":"Состояние",
 "特殊拨号":"Спец. код",
 "设备列表":"Перечень",
+"限速设置":"Установить",
 "客户端IP":"IP клиента",
 "重启中...":"Перезагрузка...",
 "查询中...":"Обработка...",
