--- a/lang/ru.json
+++ b/lang/ru.json
@@ -4,7 +4,7 @@
 "路由器正常工作情况下建议使用系统升级检测进行升级，在当系统无法升级或需要降级到前一版本时使用手动上传rom包进行升级。":"В обычном режиме рекомендуется использовать автоматические обновления. Ручное обновление обычно используется для понижения версии прошивки.",
 "5G Wi-Fi是运行在5GHz以上的高频段的独立Wi-Fi比较2.4G Wi-Fi速度更快更稳定，适合电视、盒子包括距离路由器较近的设备":"5G Wi-Fi - это более быстрый Wi-Fi по сравнению с 2.4G, он более стабильный, но обладает меньшей дальностью действия.",
 "WiFi双频合一关闭，5G会默认使用2.4G相同的网络名称（加后缀_5G）和密码，如需设成不一样，请进行修改。":"Wi-Fi точки будут разделены на 2 частоты. 5G будет иметь в названии приставку.",
-"当你需要通过VPN使用外网时，可以开启此功能保证小米路由器APP远程服务可用，其他情况下关闭此功能":"Когда вам нужно использовать внешнюю сеть через VPN, вы можете включить эту функция обеспечивает просо APP дистанционное обслуживание доступно маршрутизатор, отключите эту функцию в остальных случаях. <span style='color:red'>Помоги улучшить перевод, напиши в чате свой вариант этого текста.</span>",
+"当你需要通过VPN使用外网时，可以开启此功能保证小米路由器APP远程服务可用，其他情况下关闭此功能":"Вы можете включить эту функцию, чтобы обеспечить доступ через VPN к сервисам xiaomi. APP, обновления, прошивки. Другие VPN каналы будут отключены. <span style='color:red'>Помоги улучшить перевод, напиши в чате свой вариант этого текста.</span>",
 "开启相册备份后，回家手机上的照片将自动备份到小米路由器上，无需担心手机空间存储不足或数据丢失":"Включите резервное копирование с телефона и не переживайте о нехватке свободного места на нем или утере данных.",
 "路由器重启需要等待十几秒或更多时间，重启过程中将会断开网络连接，稍后将自动重新连接网络。":"Перезагрузка займет какое-то время. Наберитесь терпения.",
 "开启白名单功能后，将只允许名单中的设备访问管理后台，每次开启会将本机自动添加至白名单。":"При включении функции белого списка позволит получить доступ к списку фон управления оборудованием только, каждый раз, когда вы открываете машину будут автоматически добавлены в белый список.",
@@ -120,7 +120,7 @@
 "DHCP静态IP分配":"DHCP/IP присвоение",
 "(UTC-2)中大西洋":"(UTC-2) в Атлантика",
 "MAC地址白名单":"MAC-адреса белого списка",
-"小米服务走VPN":"XIAOMI VPN",
+"小米服务走VPN":"Сервисное обслуживание xiaomi через VPN",
 "黑名单设备列表":"Список адресов",
 "文件共享与访问":"Общий доступ к файлам",
 "中继路由器切换":"Переключение режима повторителя",
@@ -162,6 +162,7 @@
 "一键无线中继":"Ключ беспроводного реле",
 "日志上传成功":"Журнал успешно загружен",
 "最高速度设置":"Установка максимальной скорости",
+"没有设置信息":"Нет информации",
 "请立即升级。":"Рекомендуем обновить",
 "自动（推荐）":"Автоматически (рек.)",
 "手工限速模式":"Ручной режим ограничения скорости",
@@ -380,6 +381,7 @@
 "开关":"Режим",
 "位置":"Место установки",
 "本机":"ПК",
+"最高":"Максимальная ",
 "小时":"час. ",
 "台":" устр.",
 "良":"  Хороший",
