--- a/lang/ru.json
+++ b/lang/ru.json
@@ -134,6 +134,7 @@
 "(UTC-6)中美洲":"(UTC-6) Центральная Америка",
 "Wi-Fi双频合一":"Двойной Wi-Fi",
 "UPnP设备列表":"Список устройств UPnP",
+"没有UPnP设备":"Нет UPnP устройств",
 "系统ROM版本":"Версия прошивки",
 "修改Wi-Fi设置":"Изменение настроек Wi-Fi",
 "MAC地址克隆":"MAC клонирование",
