--- a/lang/ru.json
+++ b/lang/ru.json
@@ -392,6 +392,7 @@
 "天":"дн. ",
 "分":"мин. ",
 "秒":"сек. ",
+"家":"Дома",
 "输入值太大，最大允许1090.56。":"Максимально допустимо 1090,56.",
 "找不到要中继的网络":"Не удается найти сеть для передачи",
 "输入值太大，最大允许1024。":"Максимально допустимые 1024.",
