--- a/lang/ru.json
+++ b/lang/ru.json
@@ -294,6 +294,7 @@
 "台湾繁體":"Традиционный Тайвань",
 "官方微博":"оф. блог",
 "香港地区":"Гонконг",
+"当前时间":"Текущее время",
 "台湾地区":"Тайвань",
 "中国大陆":"Китай",
 "官方微信":"4PDA",
@@ -384,6 +385,7 @@
 "本机":"ПК",
 "最高":"Максимальная ",
 "小时":"час. ",
+ "时":"час. ",
 "台":" устр.",
 "良":"  Хороший",
 "年":" г. ",
